...
            "state": "translated",
            "value": "Додати підписку"
          }
        }
      }
    },
    "Add the Shortcut": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Додати команду"
          }
...
            "state": "translated",
            "value": "Відкрити api.monobank.ua"
          }
        }
      }
    },
    "Open the Shortcut": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Відкрити команду"
          }
...
            "state": "translated",
            "value": "Сервіс, наприклад Netflix"
          }
        }
      }
    },
    "Set Up Automatic Recording": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Налаштувати автозапис оплат"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Налаштування"
          }
...
